--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.1",
-    "styled-components": "^4.0.3"
+    "styled-components": "^4.0.3",
+    "three": "^0.98.0"
   },
   "scripts": {
     "start": "react-scripts start",
